--- a/parallaxSlider.htm
+++ b/parallaxSlider.htm
@@ -47,6 +47,9 @@
             </ul>
         </div>
     </div>
+    <div>
+        <input type="button" id="home" value="home page"/>
+    </div>
     <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
     <script src="js/parallaxSlider.js" type="text/javascript"></script>
 </body>
